--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 62.5%;
@@ -23,6 +24,11 @@ body {
     height: 300px;
     background-color: #fff;
     border-radius: 8px;
+}
+
+.container .no-events {
+    display: none;
+    color: red;
 }
 
 form {
@@ -56,4 +62,44 @@ form button {
     text-transform: capitalize;
     cursor: pointer;
     background-color: #002339;
+}
+
+.countdown-container {
+    background: #fff;
+    width: fit-content;
+    height: 300px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 4px;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+.countdown-container h1 {
+    font-size: 1.3rem;
+}
+
+/*
+.countdown-container .event-value {
+    margin-bottom: 20px;
+    font-size: 2rem;
+    color: orangered;
+}
+*/
+
+.countdown-container #event-countdown {
+    font-size: 2.2rem;
+    color: orangered;
+}
+
+.countdown-container button {
+    width: 35%;
+    height: 30px;
+    display: grid;
+    place-items: center;
+    font-size: 1rem;
+    background: orangered;
+    border-radius: 2px;
+    cursor: pointer;
 }
